--- a/nin.html
+++ b/nin.html
@@ -26,7 +26,7 @@
   <button type="submit"><i class="fa fa-search"></i></button>
 </form>
 <ul id="myUL">
-  <li><a href="webkid.html">บัณฑิตา 64010454</a></li>
+  <li><a href="web64010454.html">บัณฑิตา 64010454</a></li>
   <li><a href="#">พัท 65000</a></li>
 
   <li><a href="#">Billy 640000</a></li>
